# embedded-rust-playground

./: .gdbinit  .gitignore  Cargo.toml  README.md  memory.x  stlink.cfg
.cargo/: config.toml
src/: driver.rs  lib.rs  main.rs
