[package]
name = "embedded-rust-sandbox"
version = "0.1.0"
# TODO: Upgrade (maybe even to 2024)
#edition = "2021"

[profile.release]
overflow-checks = true
codegen-units = 1 # better optimizations
debug = true
lto = true # better optimizations

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_panics_doc = "allow"
missing_errors_doc = "allow"

[dependencies]
cortex-m = "0.5.6"
cortex-m-rt = "0.5.3"
cortex-m-semihosting = "0.3.1"
panic-semihosting = "0.5.0"

# Uncomment for the panic example.
# panic-itm = "0.1.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.4"

# Uncomment for the device example.
# [dependencies.stm32f103xx]
# features = ["rt"]
# version = "0.10.0"
